--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,9 @@ dependencies {
     def lottieVersion = "6.0.1"
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
+
+    //Navigation
+    def nav_version = "2.6.0"
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
 }
